--- a/config/database.yml
+++ b/config/database.yml
@@ -27,6 +27,6 @@ production:
   encoding: utf8mb4
   charset: utf8mb4
   collation: utf8mb4_general_ci
-  host: <%= ENV["rds-mysql-server.ccvpq7c8ukbx.ap-northeast-1.rds.amazonaws.com"]
+  host: <%= ENV["rds-mysql-server.ccvpq7c8ukbx.ap-northeast-1.rds.amazonaws.com"] %>
   username: <%= ENV["root"] %>
-  password: <%= ENV["takuam8!"]
+  password: <%= ENV["takuam8!"] %>
